package app.entities;

public enum OrderStatus {
    PENDING , PAID
}
