package entities;

public enum ProductType {
    STANDARD, CUSTOM
}
